--- a/.github/workflows/guix.yml
+++ b/.github/workflows/guix.yml
@@ -29,6 +29,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [cache-sources]
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: guix cache
         uses: actions/cache@v3
         with:
