--- a/.github/workflows/guix.yml
+++ b/.github/workflows/guix.yml
@@ -34,6 +34,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: guix cache
+        id: cache
         uses: actions/cache@v3
         with:
           path: |
