Bootstrappable Debian package

--- a/.github/workflows/guix.yml
+++ b/.github/workflows/guix.yml
@@ -86,8 +86,8 @@ jobs:
             host: "x86_64-linux-gnu"
           - name: "x86_64-linux-gnu.no-tor-bundle"
             host: "x86_64-linux-gnu.no-tor-bundle"
-          - name: "x86_64-linux-gnu.flatpak"
-            host: "x86_64-linux-gnu.flatpak"
+          - name: "x86_64-linux-gnu.pack"
+            host: "x86_64-linux-gnu.pack"
           - name: "aarch64-linux-gnu"
             host: "aarch64-linux-gnu"
           - name: "arm-linux-gnueabihf"
