flatpak: cleanup pack

--- a/contrib/flatpak/share/applications/org.featherwallet.Feather.desktop
+++ b/contrib/flatpak/share/applications/org.featherwallet.Feather.desktop
@@ -4,7 +4,7 @@ Name=Feather Wallet
 GenericName=Monero Wallet
 Comment=A free Monero desktop wallet
 Icon=org.featherwallet.Feather
-Exec=/app/startup.sh
+Exec=/app/startup
 Terminal=false
 Categories=Network;Qt;Finance
 StartupNotify=false
