depends: boost: fix build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,9 @@ if(STATIC)
     set(MANUAL_SUBMODULES 1)
 
     set(Boost_USE_STATIC_LIBS ON)
-    set(Boost_USE_STATIC_RUNTIME ON)
+    if (NOT CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+        SET(Boost_USE_STATIC_RUNTIME ON)
+    endif()
 endif()
 
 include(CMakePackageConfigHelpers)
