depends: fix arm64-apple-darwin build

--- a/contrib/depends/toolchain.cmake.in
+++ b/contrib/depends/toolchain.cmake.in
@@ -109,6 +109,8 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
   SET(CMAKE_ASM-ATT_COMPILER as)
   SET(CMAKE_ASM_COMPILER_TARGET ${CLANG_TARGET})
   SET(CMAKE_ASM-ATT_COMPILER_TARGET ${CLANG_TARGET})
+  SET(CMAKE_AR @prefix@/native/bin/${CLANG_TARGET}-ar)
+  SET(CMAKE_RANLIB @prefix@/native/bin/${CLANG_TARGET}-ranlib)
   SET(APPLE True)
   SET(BUILD_64 ON)
   SET(BREW OFF)
