--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,6 @@ set(COPYRIGHT_HOLDERS "The Monero Project")
 # Configurable options
 option(STATIC "Link libraries statically, requires static Qt" OFF)
 option(SELF_CONTAINED "Disable when building Feather for packages" OFF)
-option(LOCALMONERO "Include LocalMonero module" ON)
-option(XMRIG "Include XMRig module" ON)
 option(TOR_DIR "Directory containing Tor binaries to embed inside Feather" OFF)
 option(CHECK_UPDATES "Enable checking for application updates" OFF)
 option(PLATFORM_INSTALLER "Built-in updater fetches installer (windows-only)" OFF)
@@ -27,6 +25,18 @@ option(USE_DEVICE_TREZOR "Trezor support compilation" ON)
 option(DONATE_BEG "Prompt donation window every once in a while" OFF)
 option(WITH_SCANNER "Enable webcam QR scanner" ON)
 option(STACK_TRACE "Dump stack trace on crash (Linux only)" OFF)
+
+# Plugins
+option(WITH_PLUGIN_HOME "Include Home tab plugin" ON)
+option(WITH_PLUGIN_TICKERS "Include Tickers Home plugin" ON)
+option(WITH_PLUGIN_CROWDFUNDING "Include Crowdfunding Home plugin" ON)
+option(WITH_PLUGIN_BOUNTIES "Include Bounties Home plugin" ON)
+option(WITH_PLUGIN_REDDIT "Include Reddit Home plugin" ON)
+option(WITH_PLUGIN_REVUO "Include Revuo Home plugin" ON)
+option(WITH_PLUGIN_CALC "Include Calc tab plugin" ON)
+option(WITH_PLUGIN_EXCHANGE "Include Exchange tab plugin" ON)
+option(WITH_PLUGIN_LOCALMONERO "Include LocalMonero plugin" ON)
+option(WITH_PLUGIN_XMRIG "Include XMRig plugin" ON)
 
 list(INSERT CMAKE_MODULE_PATH 0 "${CMAKE_SOURCE_DIR}/cmake")
 include(CheckCCompilerFlag)
